--- a/report.ipynb
+++ b/report.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 26,
    "id": "b5177dbe",
    "metadata": {},
    "outputs": [],
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 27,
    "id": "b9717633",
    "metadata": {},
    "outputs": [
@@ -428,7 +428,7 @@
        "[21613 rows x 17 columns]"
       ]
      },
-     "execution_count": 352,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 28,
    "id": "cff3f020",
    "metadata": {},
    "outputs": [
@@ -765,7 +765,7 @@
        "[21179 rows x 17 columns]"
       ]
      },
-     "execution_count": 353,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 29,
    "id": "7e586da3",
    "metadata": {},
    "outputs": [
@@ -791,7 +791,7 @@
        "372"
       ]
      },
-     "execution_count": 354,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 30,
    "id": "5d256a5b",
    "metadata": {},
    "outputs": [
@@ -1131,7 +1131,7 @@
        "[21177 rows x 18 columns]"
       ]
      },
-     "execution_count": 355,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1150,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 31,
    "id": "e70376fe",
    "metadata": {},
    "outputs": [
@@ -1261,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 32,
    "id": "1847284f",
    "metadata": {},
    "outputs": [
@@ -1330,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 33,
    "id": "4323354d",
    "metadata": {},
    "outputs": [
@@ -1352,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 34,
    "id": "ea3338ff",
    "metadata": {},
    "outputs": [
@@ -1379,7 +1379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 37,
    "id": "24532336",
    "metadata": {},
    "outputs": [
@@ -1387,12 +1387,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.00414973 0.00465228 0.00463648]\n",
+      "[0.00414973 0.00465228 0.00463648 0.00464953 0.00453522 0.00460926]\n",
       "\n",
-      "[0.00192985 0.00048137 0.00058711]\n",
-      "[['High', 'High', 'High'], ['High', 'High', 'Low'], ['Low', 'High', 'Low']]\n",
+      "[0.00192985 0.00048137 0.00058711 0.00070212 0.00065065 0.00057794]\n",
+      "[['High', 'High', 'High'], ['High', 'High', 'Low'], ['Low', 'High', 'Low'], ['High', 'High', 'High'], ['High', 'High', 'High'], ['Low', 'High', 'Low']]\n",
       "\n",
-      "Low\n"
+      "High\n"
      ]
     }
    ],
@@ -1419,7 +1419,7 @@
     "        votes = [i[1][-1] for i in r]\n",
     "        return max(set(votes), key=votes.count)\n",
     "\n",
-    "model = MultiModel(3)\n",
+    "model = MultiModel(6)\n",
     "\n",
     "print(np.exp(model.score(np.array([[3,4,5]]).transpose())))\n",
     "\n",
